# maybee_backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  release.yaml  release.yml  unit-tests.yml  version-check.yml
maybee_backend/: cache.py  config.py  database.py  logging.py  main.py
maybee_backend/api/: routes.py  sorting_mode.py
maybee_backend/bandits/: epsilon_greedy.py  get_bandit.py  softmax.py  ucb1.py
maybee_backend/client/: client.py
maybee_backend/models/: core_models.py  get_average_rewards_per_arm.py  user_models.py
maybee_backend/setup/: create_admin_user.py
maybee_backend/simulations/: simulation_environment.py
tests/: conftest.py  statics.py  test_endpoints.py  test_ucb1_bandit.py  test_update_average_rewards_per_arm.py  validate_dataclass_object.py
tests/bandits/: test_epsilon_greedy_bandit.py  test_softmax_bandit.py  test_ucb1_bandit.py
tests/endpoints/: test_action_endpoints.py  test_arm_endpoints.py  test_avg_rewards_per_arm_endpoint.py  test_core_api_functionality.py  test_environment_endpoints.py  test_observation_endpoints.py  validate.py
