[tool.poetry]
name = "maybee_backend"
version = "0.1.11"
description = "Restful API for non-contextual multi armed bandits"
authors = ["Walter Hoekstra"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlmodel = "^0.0.21"
fastapi = {extras = ["standard"], version = "^0.112.2"}
numpy = "^2.1.0"
psycopg2-binary = "^2.9.9"
loguru = "^0.7.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
pytest = "^8.3.3"
bcrypt = "^4.2.0"
redis = "^5.1.0"
fakeredis = "^2.25.1"
pytest-asyncio = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pre-commit = "^3.8.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    "."
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
